--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "first-app",
+  "homepage": "https://your-github-username.github.io/repository-name",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,8 +12,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.3",
+    "appwrite": "^17.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-use": "^17.6.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
